# mri-segmentation

./: .editorconfig  .flake8  .gitignore  README.md
core/: pyproject.toml
core/dicom_processing/: utils.py
core/patients/: models.py  utils.py
core/patients/api/: serializers.py  urls.py  views.py
core/patients/management/commands/: rebuild_images.py
core/patients/migrations/: 0001_initial.py  0002_auto_20210424_0452.py  0003_alter_mri_file.py
core/settings/: asgi.py  local.py  urls.py  wsgi.py
webui/: .eslintrc  .prettierrc  package.json
webui/public/: index.html
webui/src/: App.tsx  index.tsx
webui/src/components/: AddEditForm.tsx  Navigation.tsx  Popup.tsx
webui/src/components/native/: index.ts
webui/src/components/sakura/: index.ts
webui/src/hooks/: index.ts  useFetchMRI.ts  useFetchMRIs.ts  useFetchPatients.ts
webui/src/query/: conf.ts  types.d.ts  useMutation.ts  useQuery.ts
webui/src/requests/: api.ts
webui/src/utils/: index.ts  types.ts
webui/src/utils/query/: conf.ts  types.d.ts  useMutation.ts  useQuery.ts
webui/src/utils/theme/: theme.ts
