[tool.poetry]
name = "mri-segmentation"
version = "0.1.0"
description = "Patient MRI's AI assisted imaging segmentation"
authors = ["GPDB"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-comprehensions = "^3.3.1"
flake8-no-types = "^1.1.1"
flake8-tidy-imports = "^4.2.1"
ipdb = "^0.13.3"
ipython = "7.15.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-versions = ["py36"]

[tool.isort]
atomic = true
profile = "black"
sections = ["FUTURE", "STDLIB", "FASTAPI", "STARLETTE", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true
line_length = 120
